# cln-nip47

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  coffee.yml  pyproject.toml
.github/workflows/: ci.yml  latest_v25.02.yml  main_v25.02.yml
src/: main.rs  nwc.rs  nwc_balance.rs  nwc_hold.rs  nwc_info.rs  nwc_invoice.rs  nwc_keysend.rs  nwc_lookups.rs  nwc_notifications.rs  nwc_offer.rs  nwc_pay.rs  parse.rs  rpc.rs  structs.rs  tasks.rs  util.rs
tests/: config.toml  conftest.py  pyproject.toml  setup.sh  test_cln-nip47.py  test_clnnip47.py  test_clnnwc.py  util.py
