[package]
name = "cln-nip47"
version = "0.1.6"
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow = "1"
log = { version = "0.4", features = ['std'] }
log-panics = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread"] }
cln-rpc = "0.5"
# cln-rpc = { path = "../lightning/cln-rpc/", version = "^0.4" }
cln-plugin = "0.5"
# cln-plugin = { path = "../lightning/plugins/", version = "^0.4" }
parking_lot = "0.12"

# nostr-sdk = { git = "https://github.com/rust-nostr/nostr.git", rev = "f7122f5", features = ["nip47", "nip04", "nip44"]}
# nostr-sdk = { version = "0.42", features = ["nip47", "nip04", "nip44"]}
nostr-sdk = { git = "https://github.com/daywalker90/nostr.git", branch = "bolt12", features = [
    "nip47",
    "nip04",
    "nip44",
] }
# nostr-sdk = { path = "../nostr/crates/nostr-sdk", version = "0.42", features = [
#     "nip47",
#     "nip04",
#     "nip44",
# ] }

uuid = { version = "1", features = ["v4"] }

hex = "0.4"

regex = "1"


[profile.optimized]
inherits = "release"
strip = "debuginfo"
codegen-units = 1
lto = "fat"
debug = false
