[package]
name = "cln-nip47"
version = "0.1.6"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "1"
log = { version = "0.4", features = ['std'] }
log-panics = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread"] }
cln-rpc = "0.4"
# cln-rpc = { path = "../lightning/cln-rpc/", version = "^0.4" }
cln-plugin = "0.4"
# cln-plugin = { path = "../lightning/plugins/", version = "^0.4" }
parking_lot = "0.12"

nostr-sdk = { git = "https://github.com/rust-nostr/nostr.git", rev = "8efa2640058ea94540f050fa900f9f85144d9eba", features = [
    "nip47",
    "nip04",
    "nip44",
] }
# nostr-sdk = { git = "https://github.com/daywalker90/nostr.git", branch = "47-hold", features = [
#     "nip47",
#     "nip04",
#     "nip44",
# ] }
# nostr-sdk = { version = "0.42", features = ["nip47", "nip04", "nip44"]}
# nostr-sdk = { path = "../nostr/crates/nostr-sdk", version = "0.43", features = [
#     "nip47",
#     "nip04",
#     "nip44",
# ] }

uuid = { version = "1", features = ["v4"] }

hex = "0.4"

regex = "1"


[profile.optimized]
inherits = "release"
strip = "debuginfo"
codegen-units = 1
lto = "fat"
debug = false
