[project]
name = "cln-nip47"
version = "0.1.0"
requires-python = ">=3.9"
description = "python dependencies for running tests"

[dependency-groups]
dev = [
    "pytest>=7.4,<9",
    # can be upgraded when pyln-testing is always >=25.9
    "pytest-asyncio==0.23.8",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "nostr-sdk>=0.43",
    "PyYAML>=6.0.2,<7",
    "nostr_relay>=1.14",
    "pyln-testing==25.5",
    "pyln-client==25.5",
    "pyln-proto==25.5",
]
